# Milio

./: .env.example  .gitignore  README.md
apps/mobile/milio-mobile/: .env.development  .gitignore  app.json  app.tsx  babel.config.js  eas.json  package-lock.json  package.json
apps/mobile/milio-mobile/android/: settings.gradle
apps/mobile/milio-mobile/android/app/: build.gradle
apps/mobile/milio-mobile/app/: _layout.tsx  library.tsx  modal.tsx
apps/mobile/milio-mobile/app/(tabs)/: _layout.tsx  apps.tsx  explore.tsx  index.tsx
apps/mobile/milio-mobile/app/apps/: [appId].tsx
apps/mobile/milio-mobile/app/chat/: [chatId].tsx
apps/mobile/milio-mobile/components/: ErrorBoundary.tsx  hello-wave.tsx  parallax-scroll-view.tsx
apps/mobile/milio-mobile/components/ui/: icon-symbol.tsx
apps/mobile/milio-mobile/lib/: api.ts  auth-storage.ts  config.ts  errors.ts  useVoice.ts
apps/mobile/milio-mobile/scripts/: setup-dev.ps1  setup-dev.sh
infra/: docker-compose.yml
services/backend/: .env  .env.railway.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
services/backend/alembic/: env.py
services/backend/alembic/versions/: 001_initial_schema.py  002_user_management.py
services/backend/app/: auth.py  cleanup.py  error_handlers.py  logging_config.py  main.py  middleware.py  pagination.py  rate_limiter.py  user_management.py  validators.py
services/backend/app/default_apps/: spark_analyzer.js
services/backend/app/routes/: stt.py
services/backend/milio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+9 files in other folders)
